--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     compileSdk 30
 
     defaultConfig {
-        applicationId "ru.sumin.coroutinestart"
+        applicationId "ru.nomugop.cryptoapp"
         minSdk 24
         targetSdk 30
         versionCode 1
