--- a/build.gradle
+++ b/build.gradle
@@ -5,13 +5,20 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:7.0.0"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.21"
+        classpath "com.android.tools.build:gradle:7.0.3"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.30"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
 }
+
+//allprojects {
+//    repositories {
+//        mavenCentral()
+//        google()
+//    }
+//}
 
 task clean(type: Delete) {
     delete rootProject.buildDir
